# string-id

./: Cargo.toml  README.md
.github/workflows/: Build.yml  Test.yml
src/: lib.rs  string_id_page_allocator.rs  string_id_pool.rs
src/pool/: allocator.rs  mod.rs  slot.rs  slots.rs
src/string_id/: hash.rs  mod.rs
tests/: pool.rs  string_id.rs
